added the missed handebar helper

--- a/agile-frontend/WebContent/flatfull/tpl/contact-view/contacts-grid-view.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-view/contacts-grid-view.html
@@ -32,7 +32,7 @@
 						<div class="pull-right grid-view-actions grid-view-action-button">
 							<span class="m-r-xs c-p">
 								<a href="#contact/{{id}}">
-									<i data-toggle="tooltip" data-placement="left" title="" data-original-title="{{agile_lng_translate 'contact-details' 'edit'}" class="fa fa-pencil-square grid-edit-color"></i>
+									<i data-toggle="tooltip" data-placement="left" title="" data-original-title="{{agile_lng_translate 'contact-details' 'edit'}}" class="fa fa-pencil-square grid-edit-color"></i>
 								</a>
 							</span>
 							<span class='c-p' con_id="{{id}}" id="contact-actions-grid-delete">
