edit issue in new block

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
@@ -24,7 +24,7 @@
                               <h1>This is the perfect landing page for your apps.</h1>
                            </div>
                            <div class="editContent" style="margin: 0 0 15px;
-                              ">Explore how your products can be a champion. Includes multiple colors and variations. Available exclusively on WrapBootstrap marketplace.
+                              "><p>Explore how your products can be a champion. Includes multiple colors and variations. Available exclusively on WrapBootstrap marketplace.</p>
                            </div>
                            <div class="buttons">
                               <a href="#" class="btn btn-embossed btn-primary"><span class="fa fa-download icon"></span>Download</a>
