--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
@@ -29,7 +29,8 @@
                   <div class="col-md-6">
                      <div class="editContent" >
                         <h3 style="margin: 5px 0px 15px;">Aenean varius lorem at dui condimentum</h3>
-                        <p>
+                     </div>
+                     <div class="editContent" >   <p>
                            Ut non lobortis est. Ut dictum scelerisque luctus. Aliquam condimentum interdum odio, et fermentum nulla pharetra in. Praesent pellentesque neque nec eros tempus, ac venenatis ante interdum. Vivamus viverra est dolor, non placerat nunc commodo sed
                         </p>
                      </div>
