--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
@@ -23,7 +23,7 @@
                                     <h1>Responsive for all devices</h1>
                                 </div>
                                 <div class="editContent lead">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mi odio, gravida at turpis et, porta bibendum justo.
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mi odio, gravida at turpis et, porta bibendum justo.</p>
                                 </div>
                                 <a href="#" class="btn btn-4 btn-lg btn-wide">
                                     <span class="fa fa-cloud-download "> </span>
