--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
@@ -63,7 +63,7 @@
                </div>
                <div class="row">
                   <div class="col-md-4 col-sm-6">
-                     <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
+                     <div class="" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
                               <span class="fa fa-share-alt " style="font-size:2em;"></span>
@@ -76,7 +76,7 @@
                      </div>
                   </div>
                   <div class="col-md-4 col-sm-6">
-                     <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
+                     <div class="" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
                               <span class="fa fa-cog " style="font-size:2em;"></span>
@@ -89,7 +89,7 @@
                      </div>
                   </div>
                   <div class="col-md-4 col-sm-6">
-                     <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
+                     <div class="" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
                               <span class="fa fa-sign-in " style="font-size:2em;"></span>
