--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
@@ -17,16 +17,16 @@
                      <div class="editContent">
                         <h1 style="margin: 0px 0px 15px 0px;">What our customer say ?</h1>
                      </div>
-                     <div class="editContent" style="font-size: 14px; color: #8f96a9;">Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem  lucilius. Soleat interesset   mea cu, eum regione menandri definitionem no.
-                     Movet praesent postulant mea at, at nam dolorem  lucilius.
+                     <div class="editContent" style="font-size: 14px; color: #8f96a9;"><p>Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem  lucilius. Soleat interesset   mea cu, eum regione menandri definitionem no.
+                     Movet praesent postulant mea at, at nam dolorem  lucilius.</p>
                      </div>
                   </div>
                   <div class="row">
                      <!-- Testimonial Box -->
                      <div class="col-md-6">
                         <div class="quote col-sm-12">
-                           <div class="blue-arrow arrow-div arrow-color"></div>
-                            <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
+                           <div class="blue-arrow arrow-color"></div>
+                            <div class="editContent content"> <p>“Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.”</p></div>
                         </div>
                         <div class="client_area col-xs-12">
                            <div class="client_image"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img1.png" alt=""></div>
@@ -38,8 +38,8 @@
                      <!-- Testimonial Box -->
                      <div class="col-md-6">
                         <div class="quote green col-sm-12">
-                           <div class="green-arrow arrow-div arrow-color"></div>
-                            <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
+                           <div class="green-arrow arrow-color"></div>
+                            <div class="editContent content"> <p>“Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.”</p> </div>
                         </div>
                         <div class="client_area col-xs-12">
                            <div class="client_image"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img2.png" alt=""></div>
