--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
@@ -18,9 +18,9 @@
                   <div class="editContent">
                      <h1 style=" margin: 0 0 15px 0;">Contact us at your convience</h1>
                   </div>
-                  <div class="editContent" style=" line-height: 1.4;color: #8f96a9;font-size: 14px;">
-                     Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem  lucilius. Soleat interesset   mea cu, eum regione menandri definitionem no.
-                     Movet praesent postulant mea at, at nam dolorem  lucilius.
+                  <div class="editContent" style=" line-height: 1.4;color: #8f96a9;">
+                     <p style="font-size: 14px;">Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem  lucilius. Soleat interesset   mea cu, eum regione menandri definitionem no.
+                     Movet praesent postulant mea at, at nam dolorem  lucilius.</p>
                   </div>
                </div>
                <div class="row">
@@ -35,7 +35,7 @@
                            <div style="" class=" editContent ">
                               QUESTION ? CALL US.
                            </div>
-                           <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</div>
+                           <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" ><p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</p></div>
                            <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" >TOLL FREE: 123-456-7890</div>
                         </div>
                      </div>
@@ -53,7 +53,7 @@
                            <div style="" class=" editContent ">
                               QUESTION ? CALL US.
                            </div>
-                           <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</div>
+                           <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" ><p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</p></div>
                            <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" >TOLL FREE: 123-456-7890</div>
                         </div>
                      </div>
