SMTP queue name added for bulk personal email

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-gmail-send.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-gmail-send.html
@@ -93,7 +93,7 @@
 						{{else}} 
 							<i class="media-grid"> <img class="thumbnail m-b-none thumb" src="{{emailGravatarurl 50 email}}" /> </i>
 						{{/if}}
-						   <div class="m-l-xs pull-left">
+						   <div class="m-l-xs pull-left" style="min-width:200px">
 			   				<span class="block m-t-sm">{{name}}</span>
                 			<span class="block">{{email}}</span>
                 			<br>
