Form Description with custom theme support

--- a/agile-frontend/WebContent/misc/formbuilder/custom-theme-builder.html
+++ b/agile-frontend/WebContent/misc/formbuilder/custom-theme-builder.html
@@ -40,6 +40,7 @@
           <div class="">
             <select class="form-control">
                 <option value="formtitle">Form Title</option>
+                <option value="formtitle">Form Description</option>
             </select>
             </div>
         </div>
@@ -108,6 +109,7 @@
           <div>
               <select class="form-control">
                 <option>Title</option>
+                <option>Description</option>
                 <option>Field Label</option>
                 <option>Button Text</option>
               </select>
@@ -191,6 +193,7 @@
                 <option value="formBorder">Form Border</option>
                 <option value="formBackground">Form Background</option>
                 <option value="title">Title</option>
+                <option value="title">Description</option>
                 <option value="fieldLabel">Field Label</option>
                 <option value="buttonText">Button Text</option>
                 <option value="buttonBackground">Button Background</option>
