--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp14.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp14.html
@@ -28,7 +28,7 @@
                         <div class="editContent">
                            <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">How can I estimate my MTUs?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5; font-size: 14; color: #8f8f8f;">
+                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
                            <p>To get an idea of your MTU count, calculate your monthly active users, then add your anonymous visitor count per month.</p>
                         </div>
                      </div>
@@ -36,7 +36,7 @@
                         <div class="editContent">
                            <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Is there a free trial of the paid plans?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5; font-size: 14; color: #8f8f8f;">
+                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
                            <p>Yes! There is a 14 day free trial for the Team and Business plans.</p>
                         </div>
                      </div>
@@ -44,7 +44,7 @@
                         <div class="editContent">
                            <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Does my bill change every month?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5; font-size: 14; color: #8f8f8f;">
+                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
                            <p>Your monthly cost is based on MTUs, which may fluctuate each month based on your user activity. If you'd like to have a standard monthly or annual contract, the Business plan is right for you.</p>
                         </div>
                      </div>
@@ -54,7 +54,7 @@
                         <div class="editContent">
                            <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Do I need to have a data warehouse to use Warehouses?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5; font-size: 14; color: #8f8f8f;">
+                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
                            <p>Yes! Segment connects to your existing data warehouse and pipes in data collected from your sources. You don't have to worry about the ETL or maintaining the data pipeline. </p>
                         </div>
                      </div>
@@ -62,7 +62,7 @@
                         <div class="editContent">
                            <h5  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">Does Segment handle the billing for these other services?</h5>
                         </div>
-                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5; font-size: 14; color: #8f8f8f;">
+                        <div class=" editContent "style="font-size: 15px; margin-bottom:15px; line-height: 1.5;  color: #8f8f8f;">
                            <p>Not right now. You'll still have to pay for your accounts that you register with our Integrations and Warehouses partners.</p>
                         </div>
                      </div>
