--- a/agile-frontend/WebContent/flatfull/tpl/warning-account-cancel.html
+++ b/agile-frontend/WebContent/flatfull/tpl/warning-account-cancel.html
@@ -253,7 +253,7 @@
     {{agile_lng_translate 'Plan-and-upgrade' 'Users'}} - {{users.count}}; 
   {{/if}}
   {{#if contacts}}
-    {{agile_lng_translate 'Plan-and-upgrade' 'Contacts'}} - {{contacts.count}}; 
+    {{agile_lng_translate 'Plan-and-upgrade' 'contacts-or-companies'}} - {{contacts.count}}; 
   {{/if}}
   {{#if workflows}}
     {{agile_lng_translate 'Plan-and-upgrade' 'Campaigns'}} - {{workflows.count}}; 
