--- a/agile-frontend/WebContent/flatfull/tpl/ticket-feedback-log.html
+++ b/agile-frontend/WebContent/flatfull/tpl/ticket-feedback-log.html
@@ -82,14 +82,14 @@
 <script id="ticket-feedback-log-model-template" type="text/html">
 <td style="vertical-align:middle">
 	
-    <div class="avatar text-capitalize agile-img m-r-sm  thumb-sm" style="width:196px;
-    overflow: hidden;
+    <div class="avatar text-capitalize agile-img m-r-sm " style="width:196px;
+    overflow: hidden; border-radius: 0px;
     text-overflow: ellipsis;word-break:break-word">
                 
         {{#if contact_id}}
-                <a href="#contact/{{contact_id}}" data="{{contact_id}}" ><img class="user-img" style="height:34px;width: 34px;" src="{{img_url}}" target="_blank"/>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#contact/{{contact_id}}" data="{{contact_id}}" ><img class="user-img" style="height:34px;width: 34px;border-radius: 0px !important;" src="{{img_url}}" target="_blank"/>&nbsp;&nbsp;&nbsp;&nbsp;
         {{else}}
-                <a href="#contact/{{contact_id}}"  data="{{contact_id}}"><img class="user-img" target="_blank"  style="height:26px;width: 26px;" src="{{defaultGravatarurl 20}}"/>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="#contact/{{contact_id}}"  data="{{contact_id}}"><img class="user-img" target="_blank"  style="height:34px;width: 34px; border-radius: 0px !important;" src="{{defaultGravatarurl 20}}"/>&nbsp;&nbsp;&nbsp;&nbsp;
         {{/if}} 
     
                 {{first_name}} {{last_name}}  </a>
