--- a/agile-frontend/WebContent/flatfull/tpl/js-localize.html
+++ b/agile-frontend/WebContent/flatfull/tpl/js-localize.html
@@ -918,6 +918,8 @@ var _Agile_Resources_Json = {
             "less-text" : "{{agile_lng_translate 'widgets' 'less-text'}}",
             "see-less" : "{{agile_lng_translate 'widgets' 'see-less'}}",
             "see-more" : "{{agile_lng_translate 'widgets' 'see-more'}}",
+            "linkedin-browser-info" : "{{agile_lng_translate 'widgets' 'linkedin-browser-info'}}",
+            "install-plugin" : "{{agile_lng_translate 'widgets' 'install-plugin'}}"
       },
         "social" : {
             "Sent" : "{{agile_lng_translate 'social' 'Sent'}}",
