Form_Description_Custom_EleChange_Fix

--- a/agile-frontend/WebContent/misc/formbuilder/custom-theme-builder.html
+++ b/agile-frontend/WebContent/misc/formbuilder/custom-theme-builder.html
@@ -39,8 +39,8 @@
           <label>Form Elements</label>
           <div class="">
             <select class="form-control">
-                <option value="formtitle">Form Title</option>
-                <option value="formtitle">Form Description</option>
+                <option value="formtitle">Title</option>
+                <option value="formtitle">Description</option>
             </select>
             </div>
         </div>
